# PersistErr

./: .gitignore  Readme.md  user_study.sh
Code/: Readme.md
Code/All_Top-k/: CMakeLists.txt  main.cpp
Code/All_Top-k/HDPI/: HDPI.cpp
Code/All_Top-k/Others/: data_utility.cpp  data_utility.h  pruning.cpp  pruning.h
Code/All_Top-k/output/: all_points.txt  conv_hull_hyperplanes.txt  ext_pt.txt  hyperplane_data.txt  point.txt  top.txt
Code/ExistingAlg/: CMakeLists.txt  Readme.md  exp_stats.cpp  exp_stats.h  main.cpp
Code/ExistingAlg/Active_Ranking/: active_ranking.cpp  active_ranking.h
Code/ExistingAlg/Others/: data_utility.cpp  data_utility.h  used_function.cpp  used_function.h
Code/ExistingAlg/PointPrune/: PointPrune.cpp  PointPrune.h  user_mode.cpp  user_mode.h
Code/ExistingAlg/Preference_Learning/: preferLearn.cpp  preferLearn.h
Code/ExistingAlg/UH/: maxUtility.cpp
Code/ExistingAlg/UtilityApprox/: UtilityApprox.cpp  UtilityApprox.h
Code/ExistingAlg/output/: ext_pt.txt  hyperplane_data.txt  point.txt  top.txt
Code/ExistingAlg/rev_HDPI/: rev_HDPI.cpp  rev_HDPI.h
Code/InteractiveTopk/: CMakeLists.txt  exp_stats.cpp  exp_stats.h  main.cpp
Code/InteractiveTopk/Others/: data_struct.h  data_utility.cpp  data_utility.h  operation.cpp  operation.h  pruning.cpp  used_function.cpp  used_function.h
Code/InteractiveTopk/approx/: approx.cpp  approx.h  approx_func.cpp  approx_func.h
Code/InteractiveTopk/exact/: Exact_revised.cpp  Exact_revised.h  exact.cpp  exact.h  optimal.cpp  optimal.h
Code/InteractiveTopk/optimal/: optimal.cpp  optimal.h  optimal_exact.cpp  optimal_exact.h
Code/InteractiveTopk/output/: ext_pt.txt  hyperplane_data.txt  point.txt  top.txt
Code/InteractiveTopk/rev_HDPI/: rev_HDPI.cpp  rev_HDPI.h
Code/InteractiveTopk/sampling/: sampling.cpp  sampling.h
Code/PersistErr/: CMakeLists.txt  Readme.md  exp_stats.cpp  main.cpp
Code/PersistErr/HDPI/: HDPI.cpp
Code/PersistErr/Others/: read_write.cpp
Code/PersistErr/SEFC/: SEFC.cpp  SEFC.h  SEFC_v2.cpp  SEFC_v2.h
Code/PersistErr/exact/: Exact_revised.cpp
Code/PersistErr/optimal/: optimal.cpp  optimal_exact.cpp  optimal_exact.h
Code/PersistErr/rev_HDPI/: rev_HDPI.cpp  rev_HDPI.h
Code/PersistErr/sampling/: sampling.h
Code/input/: 2d100k.txt  3d100k.txt  4d10k.txt  4d1k.txt  airbnb.txt  airbnb_discount.txt
Code/log_user_study/user_study_fix_ques_num/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  conf_reg1.txt  conf_reg2.txt  summary.txt
Code/log_user_study/user_study_fix_ques_num_history/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
Code/log_user_study/user_study_fix_ques_num_persist/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  conf_reg1.txt  summary.txt
Code/log_user_study/user_study_fix_ques_num_persist_history/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
Code/log_user_study/user_study_semi_fix_ques_num/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  conf_reg2.txt  summary.txt
Code/log_user_study/user_study_semi_fix_ques_num_history/: 1.txt  2.txt  3.txt  5.txt  6.txt
Code/log_user_study/user_study_semi_fix_ques_num_persist/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  conf_reg2.txt  summary.txt
Code/log_user_study/user_study_semi_fix_ques_num_persist_history/: 1.txt  2.txt  4.txt  5.txt  6.txt
Code/ques_type/: CMakeLists.txt  Readme.md  exp_stats.h  main.cpp
Code/ques_type/Others/: data_utility.cpp  used_function.h
Code/ques_type/exact/: exact_question.cpp  exact_question.h
Code/ques_type/optimal/: optimal.cpp  optimal_exact_question.cpp  optimal_exact_question.h  optimal_question.cpp  optimal_question.h
Code/ques_type/sampling/: sampling_listwise.cpp  sampling_listwise.h  sampling_question.cpp  sampling_question.h
Code/user_study/: Readme.md  exp_stats.cpp  user_study.cpp  user_study_func.cpp  user_study_func.h
Code/user_study/Active_Ranking/: active_ranking.cpp  active_ranking.h
Code/user_study/Preference_Learning/: preferLearn.h
Code/user_study/UH/: maxUtility.h
Code/user_study/exact/: Exact_revised.h
Code/user_study/logs/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  conf_reg1.txt  summary  summary.txt
Code/user_study/rev_HDPI/: rev_HDPI.h
Code/user_study_discount/: CMakeLists.txt  Readme.md  exp_stats.cpp  exp_stats.h  user_study.cpp  user_study_func.cpp  user_study_func.h
Code/user_study_discount/Others/: data_utility.h
Code/user_study_discount/approx/: approx_func.h
Code/user_study_discount/sampling/: sampling.cpp  sampling.h
Code/user_study_fix_ques_num/: CMakeLists.txt  exp_stats.h  user_study.cpp  user_study_func.cpp  user_study_func.h
Code/user_study_fix_ques_num/UtilityApprox/: UtilityApprox.h
Code/user_study_fix_ques_num/approx/: approx.cpp
Code/user_study_fix_ques_num/exact/: Exact_revised.cpp
Code/user_study_fix_ques_num/rev_HDPI/: rev_HDPI.h
Code/user_study_fix_ques_num/sampling/: sampling.cpp
Code/user_study_fix_ques_num_persist/: exp_stats.cpp  user_study.cpp  user_study_func.cpp  user_study_func.h
Code/user_study_fix_ques_num_persist/Active_Ranking/: active_ranking.cpp
Code/user_study_fix_ques_num_persist/Others/: pruning.h
Code/user_study_fix_ques_num_persist/PointPrune/: PointPrune.cpp  partition_func.cpp  partition_func.h
Code/user_study_fix_ques_num_persist/exact/: Exact_revised.cpp
Code/user_study_fix_ques_num_persist/optimal/: optimal.h
Code/user_study_fix_ques_num_persist/rev_HDPI/: rev_HDPI.cpp
Code/user_study_fix_ques_num_persist/sampling/: sampling.h
Code/user_study_persist/: CMakeLists.txt  Readme.md  exp_stats.cpp  exp_stats.h  main.cpp  user_study.cpp  user_study.h  user_study_func.cpp  user_study_func.h
Code/user_study_persist/Active_Ranking/: active_ranking.cpp  active_ranking.h
Code/user_study_persist/Others/: data_utility.cpp  read_write.cpp  used_function.cpp  used_function.h
Code/user_study_persist/PointPrune/: PointPrune.cpp  PointPrune.h  (+2 more)
Code/user_study_semi_fix_ques_num/: user_study.cpp  user_study.h  user_study_func.cpp  user_study_func.h
Code/user_study_semi_fix_ques_num_persist/: CMakeLists.txt  exp_stats.h  user_study.cpp  user_study_func.cpp  user_study_func.h
(+39 files in other folders)
